# clicktrack

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
clicktrack/: __about__.py  __init__.py  cli.py
tests/: __init__.py  test_cli.py
